--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "capstone",
+  "name": "immersive",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,16 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^39.0.1",
-    "@ckeditor/ckeditor5-react": "^6.1.0",
     "axios": "^1.5.0",
-    "chart.js": "^4.4.0",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
-    "sweetalert2": "^11.7.27"
+    "sweetalert2": "^11.6.13"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.3",
@@ -27,8 +23,9 @@
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
+    "@vitejs/plugin-react-swc": "^3.3.2",
     "autoprefixer": "^10.4.15",
+    "daisyui": "^3.6.6",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
